# hlx-core

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: ci.yml  publish-hlxcore.yml  release.yml
.tools/: build.mts  deploy.mts  setup.mts  tsconfig.json
.tools/lib/: build.mts  paths.mts
hlx-boot/: CMakeLists.txt
hlx-boot/include/: boot.h  config.h  hlx_common.h  log.h  module.h  patching.h  reflection.h  trampoline.h
hlx-boot/src/: boot.c  config.c  hlcode_shim.c  hlp_forwards.inc  hlx_common.c  log.c  module.c  patching.c  reflection.c  trampoline.c
hlx-loader/: compile.hxml
hlx-loader/src/hlx/: Boot.hx  Dispatcher.hx  Native.hx  Registry.hx
hlx-runtime/: haxelib.json
hlx-runtime/src/: HlxRuntime.hx
hlx-runtime/src/hlx/runtime/: HlxPrefixControl.hx  HlxPrefixResult.hx  HookDiscoveryMacro.hx  Mod.hx  ModConfig.hx  ModConfigMacro.hx  PatchTargetKey.hx  ResolvedMember.hx
hlx-runtime/typecheck/: Main.hx  compile.hxml
